test/integration/rstanarm/model/pretty.expected
  $ ../../../../../install/default/bin/stanc --include-paths="../" --auto-format assoc_evaluate.stan

Syntax error in 'assoc_evaluate.stan', line 5, column 4 to column 7, parsing error:
   -------------------------------------------------
     3:      // mark tracks indexing within a_beta vector, which is the
     4:      // vector of association parameters
     5:      int mark = 0;
                ^
     6:  
     7:      // mark2 tracks indexing within a_K_data vector, which is the
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".


  $ ../../../../../install/default/bin/stanc --include-paths="../" --auto-format eta_add_Zb.stan

Syntax error in 'eta_add_Zb.stan', line 1, column 4 to column 6, parsing error:
   -------------------------------------------------
     1:      if (special_case) for (i in 1:t) eta += b[V[i]];
               ^
     2:      else eta += csr_matrix_times_vector2(N, q, w, v, u, b);
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".


  $ ../../../../../install/default/bin/stanc --include-paths="../" --auto-format eta_no_intercept.stan

Syntax error in 'eta_no_intercept.stan', line 2, column 2 to column 5, parsing error:
   -------------------------------------------------
     1:    // correction to eta if model has no intercept (because X is centered)
     2:    eta += dot_product(xbar, beta); 
              ^
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".


  $ ../../../../../install/default/bin/stanc --include-paths="../" --auto-format eta_z_no_intercept.stan

Syntax error in 'eta_z_no_intercept.stan', line 1, column 2 to column 4, parsing error:
   -------------------------------------------------
     1:    if (link_phi > 1) {
             ^
     2:      eta_z += dot_product(zbar, omega) - min(eta_z);
     3:    }
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".


  $ ../../../../../install/default/bin/stanc --include-paths="../" --auto-format event_lp.stan

Syntax error in 'event_lp.stan', line 1, column 2 to column 8, parsing error:
   -------------------------------------------------
     1:    vector[nrow_e_Xq] log_basehaz; // log baseline hazard AT event time and quadrature points
                 ^
     2:    vector[nrow_e_Xq] log_haz_q; // log hazard AT event time and quadrature points
     3:    vector[Nevents] log_haz_etimes; // log hazard AT the event time only
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".


  $ ../../../../../install/default/bin/stanc --include-paths="../" --auto-format make_eta.stan

Syntax error in 'make_eta.stan', line 1, column 2 to column 8, parsing error:
   -------------------------------------------------
     1:    vector[N] eta;  // linear predictor
                 ^
     2:    if (K > 0) {
     3:      if (dense_X) eta = X[1] * beta;
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".


  $ ../../../../../install/default/bin/stanc --include-paths="../" --auto-format make_eta_bern.stan

Syntax error in 'make_eta_bern.stan', line 1, column 2 to column 8, parsing error:
   -------------------------------------------------
     1:    vector[N[1]] eta0;
                 ^
     2:    vector[N[2]] eta1;
     3:    if (K > 0) {
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".


  $ ../../../../../install/default/bin/stanc --include-paths="../" --auto-format make_eta_tmp.stan

Syntax error in 'make_eta_tmp.stan', line 1, column 8 to column 14, parsing error:
   -------------------------------------------------
     1:          vector[nrow_y_Xq[m]] eta_tmp; 
                       ^
     2:          if (m == 1) {
     3:            int bMat1_colshift = 0;
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".


  $ ../../../../../install/default/bin/stanc --include-paths="../" --auto-format make_eta_tmp2.stan

Syntax error in 'make_eta_tmp2.stan', line 1, column 12 to column 18, parsing error:
   -------------------------------------------------
     1:              vector[nrow_y_Xq[sel]] eta_tmp2;
                           ^
     2:              if (sel == 1) {
     3:                int bMat1_colshift = 0;
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".


  $ ../../../../../install/default/bin/stanc --include-paths="../" --auto-format make_eta_z.stan

Syntax error in 'make_eta_z.stan', line 1, column 1 to column 3, parsing error:
   -------------------------------------------------
     1:   if (family == 4 && z_dim > 0 && link_phi > 0) {
            ^
     2:      eta_z = betareg_z * omega;
     3:    }
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".


  $ ../../../../../install/default/bin/stanc --include-paths="../" --auto-format mvmer_lp.stan

Syntax error in 'mvmer_lp.stan', line 1, column 2 to column 8, parsing error:
   -------------------------------------------------
     1:    vector[yNeta[1]] yEta1; // linear predictor
                 ^
     2:    vector[yNeta[2]] yEta2;
     3:    vector[yNeta[3]] yEta3;
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".


  $ ../../../../../install/default/bin/stanc --include-paths="../" --auto-format priors_betareg.stan

Syntax error in 'priors_betareg.stan', line 2, column 2 to column 4, parsing error:
   -------------------------------------------------
     1:    // Log-priors for coefficients
     2:    if (prior_dist_z == 1)  target += normal_lpdf(z_omega | 0, 1);
             ^
     3:    else if (prior_dist_z == 2) target += normal_lpdf(z_omega | 0, 1);
     4:    else if (prior_dist_z == 3) { // hs
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".


  $ ../../../../../install/default/bin/stanc --include-paths="../" --auto-format priors_glm.stan

Syntax error in 'priors_glm.stan', line 2, column 7 to column 9, parsing error:
   -------------------------------------------------
     1:    // Log-priors for coefficients
     2:         if (prior_dist == 1) target += normal_lpdf(z_beta | 0, 1);
                  ^
     3:    else if (prior_dist == 2) target += normal_lpdf(z_beta | 0, 1); // Student t via Cornish-Fisher expansion
     4:    else if (prior_dist == 3) { // hs
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".


  $ ../../../../../install/default/bin/stanc --include-paths="../" --auto-format priors_mvmer.stan

Syntax error in 'priors_mvmer.stan', line 2, column 2 to column 4, parsing error:
   -------------------------------------------------
     1:    // Log-priors, auxiliary params
     2:    if (has_aux[1] == 1)
             ^
     3:      aux_lp(yAux1_unscaled[1], y_prior_dist_for_aux[1],
     4:             y_prior_scale_for_aux[1], y_prior_df_for_aux[1]);
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".


